--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,3 @@
-.hidden {
-    display: none;
-}
-
 *,
 *::before,
 *::after {
@@ -418,7 +414,8 @@ button {
 /* #endregion */
 /* #region welcome mobile */
 
-/* можливо ??? краще фото не в секцію а в контейнер?!?!!!!!!!!! */
+/* можливо ??? краще фото не в секцію а в контейнер?!!!!!!!!! */
+
 .welcome-section {
     background-color: #2E2F42;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),
@@ -936,6 +933,11 @@ button {
     .team-photo {
         flex-basis: calc((100% - 64px) / 2);
     }
+
+    .team-photo-link:hover,
+    .team-photo-link:focus {
+        background-color: #404bbf;
+    }
 }
 
 @media screen and (min-width: 1158px) {
@@ -954,5 +956,114 @@ button {
 }
 
 /* #endregion */
+/* #region portfolio mobile */
+
+.overlay {
+    display: none;
+}
+
+.portfolio-section {
+    margin-bottom: 96px;
+}
+
+.portfolio-list {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 48px;
+}
+
+.portfolio-item {
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+        0 1px 1px 0 rgba(46, 47, 66, 0.16),
+        0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    background: var(--white);
+}
+
+.port-photo {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.portfolio-border {
+    border-bottom: 1px solid #e7e9fc;
+    border-left: 1px solid #e7e9fc;
+    border-right: 1px solid #e7e9fc;
+    padding: 32px 16px;
+}
+
+.portfolio-title {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    color: #2e2f42;
+    margin-bottom: 8px;
+}
+
+/* #endregion */
+/* #region portfolio tablet and pc  */
+
+@media screen and (min-width: 768px) {
+    .portfolio-list {
+        column-gap: 24px;
+        row-gap: 72px;
+    }
+
+    .portfolio-item {
+        flex-basis: calc((100% - 72px) / 2);
+    }
+}
+
+@media screen and (min-width: 1158px) {
+
+    .portfolio-section {
+        margin-bottom: 120px;
+    }
+
+    .portfolio-list {
+        column-gap: 24px;
+        row-gap: 48px;
+    }
+
+    .portfolio-item {
+        box-shadow: none;
+        cursor: pointer;
+        flex-basis: calc((100% - 48px) / 3);
+        display: flex;
+        flex-direction: column;
+        transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .portfolio-item:hover {
+        box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+            0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    }
+
+    .portfolio-thumb {
+        position: relative;
+        overflow: hidden;
+    }
+
+    .overlay {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        transform: translateY(100%);
+        background-color: #4d5ae5;
+        color: #f4f4fd;
+        padding: 40px 32px;
+        transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .portfolio-item:hover .overlay {
+        transform: translateY(0%);
+    }
+}
+
+/* #endregion  */
 
 /*  */
