--- a/css/styles.css
+++ b/css/styles.css
@@ -859,6 +859,7 @@ button {
 .team-photo {
     display: flex;
     flex-direction: column;
+    width: 264px;
     background-color: white;
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
@@ -928,10 +929,6 @@ button {
     .team-list {
         row-gap: 64px;
         column-gap: 24px;
-    }
-
-    .team-photo {
-        flex-basis: calc((100% - 64px) / 2);
     }
 
     .team-photo-link:hover,
@@ -1065,5 +1062,235 @@ button {
 }
 
 /* #endregion  */
+/* #region footer mobile */
 
-/*  */
+/*  background-color краще для самого футера або для контейнера */
+
+.footer {
+    background-color: #2e2f42;
+    padding: 100px 0;
+}
+
+.container-footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.footer-description {
+    margin-bottom: 72px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+}
+
+.logo-footer {
+    display: inline-block;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #4d5ae5;
+}
+
+.logo-color-footer {
+    color: #f4f4fd;
+}
+
+.footer-text {
+    color: #f4f4fd;
+    max-width: 288px;
+}
+
+.footer-social {
+    margin-bottom: 72px;
+}
+
+.footer-social-text {
+    font-weight: 500;
+    text-align: center;
+    color: #fff;
+    margin-bottom: 16px;
+}
+
+.footer-s-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px;
+}
+
+.footer-s-item {
+    width: 40px;
+    height: 40px;
+}
+
+.footer-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-icon {
+    fill: #f4f4fd;
+}
+
+.footer-link:focus {
+    background-color: #31d0aa;
+}
+
+.footer-subscription-text {
+    font-weight: 500;
+    text-align: center;
+    color: white;
+    margin-bottom: 16px;
+}
+
+.footer-subscription-form {
+    margin-bottom: 16px;
+}
+
+.footer-subscription-input {
+    border: 1px solid white;
+    border-radius: 4px;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+    background-color: transparent;
+    opacity: 0.3;
+    width: 288px;
+    height: 40px;
+    padding-left: 16px;
+    color: white;
+    font-size: 12px;
+    line-height: 2.0;
+    letter-spacing: 0.04em;
+}
+
+.footer-subscription-input::placeholder {
+    color: white;
+}
+
+.footer-subscription-btn {
+    font-weight: 500;
+    letter-spacing: 0.04em;
+    line-height: 1.5;
+    text-align: center;
+    color: white;
+    background-color: #4d5ae5;
+    padding: 8px 24px;
+    margin: 0 auto;
+    margin-top: 16px;
+    border-radius: 4px;
+    border: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 165px;
+    height: 40px;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-subscription-icon {
+    margin-left: 16px;
+    fill: white;
+}
+
+.footer-subscription-btn:focus {
+    background-color: #31d0aa;
+}
+
+/* #endregion */
+
+/* #region footer tablet and pc */
+
+@media screen and (min-width: 768px) {
+    .footer {
+        padding: 96px 0;
+    }
+
+    .container-footer {
+        flex-direction: row;
+        flex-wrap: wrap;
+        align-items: baseline;
+        padding-left: 108px;
+    }
+
+    .footer-description {
+        margin-right: 24px;
+    }
+
+    .footer-text {
+        max-width: 264px;
+    }
+
+    .footer-subscription {
+        min-width: 453px;
+    }
+
+    .footer-subscription-text {
+        text-align: start;
+    }
+
+    .footer-subscription-form {
+        display: flex;
+        gap: 24px;
+    }
+
+    .footer-subscription-input {
+        max-width: 264px;
+    }
+
+    .footer-subscription-btn {
+        margin-top: 0;
+    }
+
+    .footer-link:hover,
+    .footer-link:focus {
+        background-color: #31d0aa;
+    }
+
+    .footer-subscription-btn:hover,
+    .footer-subscription-btn:focus {
+        background-color: #31d0aa;
+    }
+
+}
+
+@media screen and (min-width: 1158px) {
+    .footer {
+        padding: 100px 0;
+    }
+
+    .footer-description {
+        margin-right: 120px;
+        margin-bottom: 0;
+    }
+
+
+    .container-footer {
+        flex-wrap: nowrap;
+        padding-left: 15px;
+    }
+
+    .footer-text {
+        min-width: 264px;
+    }
+
+    .footer-social {
+        margin-right: 80px;
+        margin-bottom: 0;
+    }
+
+    .footer-subscription-input {
+        opacity: 1;
+    }
+
+}
