--- a/css/styles.css
+++ b/css/styles.css
@@ -281,7 +281,6 @@ button {
     opacity: 1;
     visibility: visible;
     pointer-events: auto;
-
 }
 
 .mobile-menu-container {
@@ -292,7 +291,6 @@ button {
     flex-direction: column;
     height: 100%;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .mobile-menu-close {
@@ -331,7 +329,6 @@ button {
     display: flex;
     flex-direction: column;
     gap: 40px;
-
 }
 
 .mobile-menu-nav .nav-link {
@@ -339,12 +336,12 @@ button {
     font-size: 36px;
     line-height: 1.11;
     letter-spacing: 0.02em;
-    color: #2E2F42;
+    color: #2e2f42;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mobile-menu-nav .nav-link:focus {
-    color: #404BBF;
+    color: #404bbf;
 }
 
 .mobile-menu-address {
@@ -368,9 +365,8 @@ button {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
 .mobile-menu-address .address-link:focus {
-    color: #4D5AE5;
+    color: #4d5ae5;
 }
 
 .mobile-s-list {
@@ -401,7 +397,7 @@ button {
 }
 
 .mobile-s-link:focus {
-    background-color: #404BBF;
+    background-color: #404bbf;
 }
 
 @media screen and (min-width: 768px) {
@@ -410,14 +406,13 @@ button {
     }
 }
 
-
 /* #endregion */
 /* #region welcome mobile */
 
 /* можливо ??? краще фото не в секцію а в контейнер?!!!!!!!!! */
 
 .welcome-section {
-    background-color: #2E2F42;
+    background-color: #2e2f42;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),
             rgba(46, 47, 66, 0.7)),
         url(../images/welcome/people-office-mobile.jpg);
@@ -498,7 +493,8 @@ button {
         max-width: 1158px;
         padding: 188px 0;
         background-image: linear-gradient(rgba(46, 47, 66, 0.7),
-                rgba(46, 47, 66, 0.7)), url(../images/welcome/people-office-@2x.jpg);
+                rgba(46, 47, 66, 0.7)),
+            url(../images/welcome/people-office-@2x.jpg);
     }
 
     .welcome {
@@ -972,8 +968,7 @@ button {
 
 .portfolio-item {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-        0 1px 1px 0 rgba(46, 47, 66, 0.16),
-        0 1px 6px 0 rgba(46, 47, 66, 0.08);
+        0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
     background: var(--white);
 }
 
@@ -1013,7 +1008,6 @@ button {
 }
 
 @media screen and (min-width: 1158px) {
-
     .portfolio-section {
         margin-bottom: 120px;
     }
@@ -1169,7 +1163,7 @@ button {
     padding-left: 16px;
     color: white;
     font-size: 12px;
-    line-height: 2.0;
+    line-height: 2;
     letter-spacing: 0.04em;
 }
 
@@ -1208,7 +1202,6 @@ button {
 }
 
 /* #endregion */
-
 /* #region footer tablet and pc */
 
 @media screen and (min-width: 768px) {
@@ -1261,7 +1254,6 @@ button {
     .footer-subscription-btn:focus {
         background-color: #31d0aa;
     }
-
 }
 
 @media screen and (min-width: 1158px) {
@@ -1273,7 +1265,6 @@ button {
         margin-right: 120px;
         margin-bottom: 0;
     }
-
 
     .container-footer {
         flex-wrap: nowrap;
@@ -1292,5 +1283,6 @@ button {
     .footer-subscription-input {
         opacity: 1;
     }
-
 }
+
+/* #endregion */
