--- a/css/styles.css
+++ b/css/styles.css
@@ -730,6 +730,10 @@ button {
         padding: 72px 24px 24px 24px;
     }
 
+    .modal-checkbox-border-text {
+        max-width: 338px;
+    }
+
     .modal-btn-close:hover,
     .modal-btn-close:focus {
         border: none;
